[gd_scene load_steps=3 format=3 uid="uid://building_menu_item"]

[ext_resource type="Script" path="res://scripts/ui/building_menu_item.gd" id="1_building_item"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.25, 0.22, 0.18, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.3, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="BuildingMenuItem" type="Control"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_building_item")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="IconRect" type="ColorRect" parent="Button/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.4, 0.7, 0.3, 1)

[node name="NameLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Building"
horizontal_alignment = 1

[node name="CostContainer" type="HBoxContainer" parent="Button/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
